src/test/ui/issues/issue-29147.stderr
error[E0283]: type annotations required: cannot resolve `S5<_>: Foo`
  --> $DIR/issue-29147.rs:21:13
   |
LL | trait Foo { fn xxx(&self); }
   |             -------------- required by `Foo::xxx`
...
LL |     let _ = <S5<_>>::xxx;
   |             ^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
